public enum FriendRequestStatus
{
    Pending,
    Accepted,
    Rejected
}